# ProjectTitan

./: .gitignore  .gitmodules  CMakeLists.txt  ProjectTitan.sln  README.md  build.cmd
ProjectTitan/: Block.cpp  Block.h  BlockManager.cpp  BlockManager.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  FastNoise.cpp  Player.h  ProjectTitan.cpp  ProjectTitan.vcxproj  ProjectTitan.vcxproj.filters  Shader.cpp  Shader.h  Test.frag  Test.vert  World.cpp  World.h
include/: Block.h  BlockManager.h  Camera.h  Chunk.h  FastNoise.h  Shader.h  Skybox.h  World.h
include/core/: BlockMap.h  ExecutionTimer.h  Logger.h  TextRenderer.h
include/effects/: SSAO.h  ShadowMapping.h
include/worldgen/: StandardWorldGen.h
includes/: constants.h  imgui_impl_vulkan.h  pch.h  stb_image.h  vk_mem_alloc.h
includes/glad/: glad.h
res/shaders/: basic.frag  basic.vert  chunk_shader.frag  chunk_shader.vert  debug_depth_quad.frag  debug_depth_quad.vert  main.frag  main.vert  shadow_depth.frag  shadow_depth.vert  skybox.frag  skybox.vert  skybox_shader.frag  skybox_shader.vert  vulkan_test.frag  vulkan_test.vert
src/: Block.h  BlockManager.cpp  BlockManager.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Entity.cpp  Entity.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Mesh.cpp  Mesh.h  Player.h  ProjectTitan.cpp  SSAO.cpp  Shader.cpp  Shader.h  ShadowMapping.cpp  Skybox.cpp  Skybox.h  StandardWorldGen.cpp  TextRenderer.cpp  TextRenderer.h  Window.cpp  Window.h  World.cpp  World.h  pch.h
src/core/: BlockMap.h  DebugDraw.cpp  DebugDraw.h  ExecutionTimer.h  Frustum.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ImageSet.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderable.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Texture2D.cpp  Texture2D.h  Vertex.h
src/core/managers/: BlockManager.cpp  BlockManager.h  PipelineManager.cpp  PipelineManager.h  ResourceManager.cpp  ResourceManager.h
src/core/resources/: Model.cpp  Model.h  Shader.h  Texture2D.cpp  Texture2D.h  TextureCubeMap.cpp  TextureCubeMap.h
src/effects/: RenderEffect.h  SSAO.cpp  SSAO.h  ShadowMapping.cpp  ShadowMapping.h
src/worldgen/: BaseWorldGen.h  StandardWorldGen.cpp  StandardWorldGen.h
